--- a/PT16151MOB_JAVA_2_MOB1023/nbproject/project.properties
+++ b/PT16151MOB_JAVA_2_MOB1023/nbproject/project.properties
@@ -35,7 +35,8 @@ dist.jlink.output=${dist.jlink.dir}/PT16151_MOB_JAVA_2_MOB1023
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,7 +72,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=PT16151_MOB_JAVA_2_MOB1023
-main.class=pt16151mob_java_2_mob1023.PT16151MOB_JAVA_2_MOB1023
+main.class=Buoi2_JAVA_Swing.Main1
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
