--- a/PT16151_MOB_JAVA2_MOB1023/nbproject/project.properties
+++ b/PT16151_MOB_JAVA2_MOB1023/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/PT16211-WEB_JAVA1_MOB1014.jar
+dist.jar=${dist.dir}/PT16151_MOB_JAVA2_MOB1023.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/PT16211-WEB_JAVA1_MOB1014
+dist.jlink.output=${dist.jlink.dir}/PT16151_MOB_JAVA2_MOB1023
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=PT16211-WEB_JAVA1_MOB1014
-main.class=Bai1_LamQuenJava_KhaiBaoBien.S1_ChuongTrinhDauTien
+jlink.launcher.name=PT16151_MOB_JAVA2_MOB1023
+main.class=Buoi2_JAVA_Swing.S9_JFrameCombobox
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
